@@ -23,9 +23,12 @@ import java.io.File;
 import java.io.PrintStream;
 import java.util.StringTokenizer;
 
-import org.apache.hadoop.fs.FsShell;
-import org.apache.hadoop.util.ToolRunner;
 import org.apache.hadoop.cli.TestCLI;
+import org.apache.hadoop.cli.util.CLITestData.TestCmd;
+import org.apache.hadoop.cli.util.CLITestData.TestCmd.CommandType;
+import org.apache.hadoop.fs.FsShell;
+import org.apache.hadoop.hdfs.tools.DFSAdmin;
+import org.apache.hadoop.util.ToolRunner;
 
 /**
  *
@@ -56,6 +59,47 @@ public class CommandExecutor {
     }
     
     return args;
+  }
+  
+  public static int executeCommand(final TestCmd cmd, final String namenode) throws Exception {
+    switch(cmd.getType()) {
+    case ADMIN:
+      return CommandExecutor.executeDFSAdminCommand(cmd.getCmd(),namenode);
+    case FS:
+      return CommandExecutor.executeFSCommand(cmd.getCmd(),namenode);
+    default:
+      throw new Exception("Unknow type of Test command:"+ cmd.getType()); 
+    }
+  }
+  
+  public static int executeDFSAdminCommand(final String cmd, final String namenode) {
+      exitCode = 0;
+      
+      ByteArrayOutputStream bao = new ByteArrayOutputStream();
+      PrintStream origOut = System.out;
+      PrintStream origErr = System.err;
+      
+      System.setOut(new PrintStream(bao));
+      System.setErr(new PrintStream(bao));
+      
+      DFSAdmin shell = new DFSAdmin();
+      String[] args = getFSCommandAsArgs(cmd, namenode);
+      cmdExecuted = cmd;
+     
+      try {
+        ToolRunner.run(shell, args);
+      } catch (Exception e) {
+        e.printStackTrace();
+        lastException = e;
+        exitCode = -1;
+      } finally {
+        System.setOut(origOut);
+        System.setErr(origErr);
+      }
+      
+      commandOutput = bao.toString();
+      
+      return exitCode;
   }
   
   public static int executeFSCommand(final String cmd, final String namenode) {
